地址添加页面和功能实现

--- a/src/pages/orders/orders.less
+++ b/src/pages/orders/orders.less
@@ -1,63 +1,63 @@
-.order-mode{
+.order-mode {
   font-size: 30px;
 
-  .order-info{
+  .order-info {
     background: #ffffff;
     margin: 20px 0;
     padding: 20px;
 
-    .shop-name{
+    .shop-name {
       padding-bottom: 20px;
       border-bottom: 1px #d6e4ef solid;
 
-      .name{
+      .name {
         margin-left: 8px;
       }
     }
 
-    .shop-info{
+    .shop-info {
       display: flex;
       padding: 20px 0;
 
-      .img{
+      .img {
         width: 120px;
         max-width: 20%;
         height: 160px;
       }
 
-      .shop-title{
+      .shop-title {
         width: 62%;
         margin: 0 3%;
       }
 
-      .price-num{
+      .price-num {
         display: flex;
         flex-direction: column;
       }
 
-      .price{
+      .price {
         color: #ff1000;
         font-size: 32px;
       }
 
-      .num{
+      .num {
         color: #999;
         font-size: 24px;
         text-align: right;
       }
     }
 
-    .count{
+    .count {
       text-align: right;
       color: #999;
 
-      .x-count{
+      .x-count {
         color: #191919;
         font-size: 32px;
         margin: 0 12px;
         font-weight: 600;
       }
-      .m-count{
+      .m-count {
         color: #ff1000;
         font-size: 32px;
         font-weight: 600;
@@ -65,11 +65,11 @@
     }
   }
 
-  .magges{
+  .magges {
     background: #ffffff;
     padding: 20px;
 
-    .picker{
+    .picker {
       display: flex;
       justify-content: space-between;
       border-bottom: 1px #d6e4ef solid;
@@ -77,34 +77,34 @@
     }
   }
 
-  .menoy{
+  .menoy {
     background: #ffffff;
     margin: 20px 0;
     padding: 20px;
 
-    .menoy-title{
+    .menoy-title {
       display: flex;
       justify-content: space-between;
     }
 
-    .menoy-count{
+    .menoy-count {
       text-align: right;
       font-size: 28px;
       margin: 20px 0;
       color: #999;
     }
 
-    .menoy-all{
+    .menoy-all {
       text-align: right;
       font-size: 36px;
     }
 
-    .money-text{
+    .money-text {
       color: #ff1000;
       font-size: 36px;
     }
 
-    .submit{
+    .submit {
       display: inline-block;
       width: 200px;
       height: 90px;
@@ -114,5 +114,14 @@
       text-align: center;
       line-height: 90px;
     }
+  }
+
+  .at-form::after {
+    border-top-width: 0;
+    border-bottom-width: 0;
+  }
+
+  .at-modal__container {
+    width: 98%;
   }
 }
