--- a/src/components/lists/lists.less
+++ b/src/components/lists/lists.less
@@ -6,10 +6,10 @@
   border-radius: 6px;
 
   .shop-img{
-    width: 200px;
+    width: 180px;
     max-width: 30%;
-    min-height: 280px;
-    height: auto;
+    min-height: 240px;
+    height: 240px;
   }
 
   .shop-con{
