--- a/src/pages/detail/detail.less
+++ b/src/pages/detail/detail.less
@@ -164,4 +164,44 @@
       line-height: 50px;
     }
   }
+
+  .text-title{
+    font-size: 32px;
+    margin: 30px 0;
+    color: #6190E8;
+  }
+
+  .figure-info{
+    
+    .pic-t{
+      width: 280px;
+      height: auto
+    }
+
+    .info-list{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin-left: 3%;
+    }
+
+    .info-list-name{
+      font-size: 36px;
+      font-weight: 500;
+    }
+
+    .info-list-item{
+      padding: 20px 0;
+    }
+  }
+
+  .book-info{
+    text-indent: 40px;
+    padding-bottom: 40px;
+    line-height: 56px;
+  }
+
+  .at-tabs__body{
+    padding-bottom: 80px;
+  }
 }
