--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -1,12 +1,13 @@
-.banner{
+.banner {
   width: 100%;
 
-  .img{
+  .img {
     width: 100%;
+    height: auto;
   }
 }
 
-.swiper-container{
+.swiper-container {
   width: 100%;
   margin-top: 60px;
 }
