--- a/src/pages/orders/orders.less
+++ b/src/pages/orders/orders.less
@@ -124,4 +124,37 @@
   .at-modal__container {
     width: 98%;
   }
+
+  .city-lists{
+    display: flex;
+    background: #ffffff;
+    border-bottom: 1px #d6e4ef solid;
+    padding: 10px;
+
+    .btn{
+      display: flex;
+      align-self:center;
+      width: 30%;
+      font-size: 24px;
+
+      .edit,.del{
+        padding: 4px;
+        cursor: pointer;
+        color:#999;
+      }
+    }
+
+    .check-icon{
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      border: 1px #ff1000 solid;
+      border-radius: 50%;
+      margin-right: 4px;
+    }
+
+    .check-hover{
+      background: #ff1000;
+    }
+  }
 }
