--- a/src/pages/records/record.less
+++ b/src/pages/records/record.less
@@ -46,4 +46,13 @@
       text-align: right;
       padding: 10px 0;
   }
+
+  .show-info{
+    padding: 20px;
+    font-size: 30px;
+  }
+
+  .is-show{
+    display: none;
+  }
 }
